[tool.poetry]
name = "luna_bot"
version = "0.1.0"
description = "The Discord-bot for Dusked Ocean server."
authors = ["Twylix <zemskov271@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.15.0"
psycopg2 = "^2.9.3"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
skip_glob=[".git", ".venv/*", "docker/*", "shared/*"]
include_trailing_comma = true

[tool.black]
skip-string-normalization = true
line-length = 79
exclude = '(\.git|\.venv|\.vscode|\docker|\shared)'